--- a/src/Pages/Community/styles/styles.css
+++ b/src/Pages/Community/styles/styles.css
@@ -50,7 +50,7 @@
 }
 
 .card-div > div{
-  font-size: 24px;
+  font-size: 30px;
 }
 
 .card-heading{
@@ -68,8 +68,8 @@
 
 /* Media queries */
 
-@media screen and (max-width: 1390px){
-  .communitySwiper .card-div{
+@media screen and (max-width: 1440px){
+  /* .communitySwiper .card-div{
     grid-template-columns: none;
     grid-template-rows: 50% 50%;
   }
@@ -77,108 +77,147 @@
   .communitySwiper .swiper {
     width: 100%;
     height: 1000px;
-  }
+  } */
 
   .card-sub-div{
     order: 2;
   }
 
-  .cardImage{
+  .card-div > div{
+    font-size: 22px;
+  }
+
+  /* .cardImage{
     order: 1;
     max-width: 100%;
     max-height: 100%;
-  }
+  } */
 
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width:1565px) {
+  communitySwiper .swiper {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1200px){
+  .communitySwiper .card-div{
+    grid-template-columns: none;
+    grid-template-rows: 50% 50%;
+  }
+
+  .communitySwiper .swiper {
+    height: 32rem;
+  }
   .cardImage{
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 30%;
     margin-bottom: 32px;
   }
+  #hkb-img{
+    max-width: 50%;
+    max-height: 50%;
+  }
+  .card-heading{
+    font-size: 28px;
+  }
+  .card-div > div{
+    font-size: 18px;
+    gap: 20px;
+  }
 }
 
-@media screen and (max-width: 896px){
-  .card-content{
-    font-size: 20px;
-  }
-  .cardImage{
-    max-width: 70%;
-    max-height: 70%;
-  }
-}
 
 @media screen and (max-width: 884px){
   .communitySwiper .swiper{
-    height: 900px;
+    width: auto;
+    height: 32rem;
   }
   .cardImage{
-    max-width: 60%;
-    max-height: 60%;
+    max-width: 30%;
+    max-height: 30%;
   }
 }
 
 @media screen and (max-width: 768px){
-  .communitySwiper .swiper{
-    height: 1000px;
+  .communitySwiper .swiper {
+    width: 40rem;
+    height: 24rem;
+  }
+  .card-heading{
+    font-size: 24px;
+  }
+  .card-div > div{
+    font-size: 14px;
+    gap: 10px;
   }
   .cardImage{
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 30%;
+    max-height: 30%;
+    margin-bottom: 24px;
   }
-}
-
-@media screen and (max-width: 664px){
-  .cardImage{
-    max-width: 50%;
-    max-height: 50%;
-  }
-}
-
-@media screen and (max-width: 572px){
-  .cardImage{
-    max-width: 50%;
-    max-height: 50%;
-  }
-}
-
-@media screen and (max-width: 543px){
-
-  .card-div{
-    padding: 2px;
-    align-items: flex-start;
-    gap: 0px;
-  }
-
-  .card-sub-div{
-    margin-top: -40px;
-  }
-  .cardImage{
+  #hkb-img{
     max-width: 40%;
-    max-height: 40%;
   }
 }
 
-@media screen and (max-width: 497px){
-  .communitySwiper .swiper{
-    height: 1000px;
+@media screen and (max-width: 700px) {
+  .communitySwiper .swiper {
+    width: 36rem;
+    height: 20rem;
+  }
+  .communitySwiper .card-div{
+    padding-top: 0px;
+    padding-bottom: 50px;
   }
   .cardImage{
-    max-width: 40%;
-    max-height: 40%;
+    max-width: 20%;
+    max-height: 20%;
   }
 }
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 640px) {
+  .communitySwiper .swiper {
+    width: 32rem;
+    height: 20rem;
+}
+}
+
+@media screen and (max-width: 575px) {
   .communitySwiper .swiper{
-    height: 800px;
+    width:95%;
   }
-  .card-content{
-    font-size: 20px;
+  .card-heading{
+    font-size: 14px;
   }
-  .cardImage{
-    max-width: 40%;
-    max-height: 40%;
+  .card-div > div{
+    font-size: 12px;
+    gap: 5px;
   }
 }
+
+@media screen and (max-width: 440px){
+  .communitySwiper .swiper {
+    width: 24rem;
+    height: 18rem;
+  }
+  .communitySwiper .card-div{
+    padding-top: 0px;
+    padding-bottom: 50px;
+  }
+  .cardImage{
+    max-width: 20%;
+    max-height: 20%;
+  }
+  .card-heading{
+    font-size: 14px;
+  }
+  .card-div > div{
+    font-size: 12px;
+    gap: 5px;
+  }
+  #hkb-img{
+    max-width: 30%;
+  }
+}
+
