--- a/src/Pages/Community/styles/styles.module.css
+++ b/src/Pages/Community/styles/styles.module.css
@@ -8,7 +8,7 @@
     margin-right: 0px !important;
     padding: 12px 12px 12px 12px !important;
     margin-bottom: 1rem;
-    list-style-type: "\1F3B2";
+    list-style-type: none;
 }
 
 .container {
