--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -174,6 +174,12 @@ p{
     padding-left: 30vw;
 }
 
+.submissionStatus{
+  margin-left: 1rem;
+  margin-top: 1rem;
+  font-size: larger;
+}
+
 .errormssg{
   color: red;
 }
